--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
   "name": "react-default-template",
   "version": "0.0.1",
-  "description": "",
+  "description": "My personal start template to create a React project",
   "main": "webpack.config.dev.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.js",
-    "pm2Serve": "serve ./dist/index.html 8080 --name dashboard"
+    "check-updates": "npx npm-check-updates -u",
+    "pm2-serve": "npm run build && serve ./dist/index.html 8080 --name react-app",
+
+    "commit": "git add . && gitmoji -c",
+    "commit-patch": "git add . && npm version patch && gitmoji -c",
+    "commit-minor": "git add . && npm version minor && gitmoji -c",
+    "commit-major": "git add . && npm version major && gitmoji -c"
   },
   "keywords": [],
   "author": "heladit000",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.12",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^9.1.0",
+    "@svgr/webpack": "^6.5.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "babel-loader": "^9.1.2",
     "clean-terminal-webpack-plugin": "^3.0.0",
-    "css-loader": "^6.7.2",
+    "css-loader": "^6.7.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "ip": "^1.1.8",
-    "mini-css-extract-plugin": "^2.7.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "path": "^0.12.7",
-    "sass": "^1.56.1",
+    "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-messages": "^2.0.4"
   },
