--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "react-default-template",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "My personal start template to create a React project",
   "main": "webpack.config.dev.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.js",
-    "check-updates": "npx npm-check-updates -u",
-    "pm2-serve": "npm run build && serve ./dist/index.html 8080 --name react-app",
-
     "commit": "git add . && gitmoji -c",
-    "commit-patch": "git add . && npm version patch && gitmoji -c",
-    "commit-minor": "git add . && npm version minor && gitmoji -c",
-    "commit-major": "git add . && npm version major && gitmoji -c"
+    "commit-patch": "npm version patch --no-git-tag-version && git add . && gitmoji -c",
+    "commit-minor": "npm version minor --no-git-tag-version && git add . && gitmoji -c",
+    "commit-major": "npm version major --no-git-tag-version && git add . && gitmoji -c"
   },
   "keywords": [],
   "author": "heladit000",
@@ -33,6 +30,8 @@
     "ip": "^1.1.8",
     "mini-css-extract-plugin": "^2.7.2",
     "path": "^0.12.7",
+    "prettier": "^2.8.7",
+    "prettier-plugin-css-order": "^1.3.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
