--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-default-template",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "My personal start template to create a React project",
   "main": "webpack.config.dev.js",
   "scripts": {
@@ -8,9 +8,9 @@
     "start": "webpack serve --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.js",
     "commit": "git add . && gitmoji -c",
-    "commit-patch": "npm version patch --no-git-tag-version && git add . && gitmoji -c",
+    "commit-major": "npm version major --no-git-tag-version && git add . && gitmoji -c",
     "commit-minor": "npm version minor --no-git-tag-version && git add . && gitmoji -c",
-    "commit-major": "npm version major --no-git-tag-version && git add . && gitmoji -c"
+    "commit-patch": "npm version patch --no-git-tag-version && git add . && gitmoji -c"
   },
   "keywords": [],
   "author": "heladit000",
